--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <script src="map_vienna_files/leaflet-binding-2.0.4.1/leaflet.js"></script>
 <script src="map_vienna_files/leaflet-providers-1.9.0/leaflet-providers_1.9.0.js"></script>
 <script src="map_vienna_files/leaflet-providers-plugin-2.0.4.1/leaflet-providers-plugin.js"></script>
-  <title>leaflet</title>
+  <title>Kaffeehäuser of the Wiener Moderne</title>
 </head>
 <body>
 <div id="htmlwidget_container">
